# django-pgwatch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test-matrix-docker.py
.github/workflows/: publish.yml  test.yml
django_pgwatch/: admin.py  consumer.py  examples.py  models.py
django_pgwatch/management/commands/: pgwatch_cleanup.py  pgwatch_listen.py
example_project/: README.md  consumers.py  docker-compose.yml  manage.py
example_project/example_project/: settings.py  urls.py  wsgi.py
tests/: settings.py  test_consumer.py  test_models.py  test_utils.py
