[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pgwatch"
version = "1.0.0"
description = "Django app for PostgreSQL LISTEN/NOTIFY with persistence and playback"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ed Menendez", email = "ed@edmenendez.com"}
]
keywords = ["django", "postgresql", "notify", "listen", "database", "triggers"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2",
    "psycopg>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "django-stubs>=4.2",
]

[project.urls]
Homepage = "https://github.com/edmenendez/django-pgwatch"
Documentation = "https://github.com/edmenendez/django-pgwatch#readme"
Repository = "https://github.com/edmenendez/django-pgwatch"
"Bug Tracker" = "https://github.com/edmenendez/django-pgwatch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_pgwatch*"]

[tool.setuptools.package-data]
django_pgwatch = ["migrations/*.py", "management/commands/*.py"]

[tool.ruff]
line-length = 90
target-version = "py39"
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.9"
# More lenient settings for Django codebase
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
warn_return_any = false
disallow_any_generics = false
disallow_untyped_calls = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
# Django-specific settings
plugins = ["mypy_django_plugin.main"]
# Be more lenient with typing for now
no_implicit_optional = false
allow_untyped_globals = true
disallow_untyped_globals = false
# Allow Any types and untyped code
allow_any_generics = true
allow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov=django_pgwatch --cov-report=term-missing"